# SofaSphFluid

./: CMakeLists.txt  README.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
examples/: ParticlesRepulsionForceField.scn  RegressionStateScenes.regression-tests
extensions/CUDA/: CMakeLists.txt  SofaSphFluid.CUDAConfig.cmake.in
extensions/CUDA/src/SofaSphFluid/CUDA/: CudaParticleSource.cpp  CudaParticleSource.cu  CudaParticleSource.inl  CudaParticlesRepulsionForceField.cpp  CudaParticlesRepulsionForceField.cu  CudaParticlesRepulsionForceField.h  CudaParticlesRepulsionForceField.inl  CudaSPHFluidForceField.cpp  CudaSPHFluidForceField.cu  CudaSPHFluidForceField.h  CudaSpatialGridContainer.cpp  CudaSpatialGridContainer.cu  CudaSpatialGridContainer.h  CudaSpatialGridContainer.inl  config.h.in  init.cpp  init.h
src/SofaSphFluid/: OglFluidModel.cpp  OglFluidModel.h  OglFluidModel.inl  ParticleSink.cpp  ParticleSink.inl  ParticleSource.cpp  ParticleSource.inl  ParticlesRepulsionForceField.cpp  ParticlesRepulsionForceField.h  ParticlesRepulsionForceField.inl  SPHFluidForceField.cpp  SPHFluidForceField.inl  SPHFluidSurfaceMapping.cpp  SPHFluidSurfaceMapping.inl  SpatialGridContainer.cpp  SpatialGridContainer.inl  SpatialGridPointModel.cpp  config.h.in  initSPHFluid.cpp  initSPHFluid.h
